--- a/style1.css
+++ b/style1.css
@@ -47,28 +47,40 @@ input:hover {
 }
 
 #answer {
-  margin-top: 20px;
-  padding: 15px;
-  background-color: #f0fdf4;
-  border: 1px solid #bbf7d0;
-  border-radius: 8px;
-  text-align: center;
+    display: none;
+    margin-top: 20px;
+    padding: 15px;
+    background-color: #f0fdf4;
+    border: 1px solid #bbf7d0;
+    border-radius: 8px;
+    text-align: center;
 }
 
 #answer h3 {
-  font-size: 18px;
-  color: #065f46;
+    font-size: 18px;
+    color: #065f46;
 }
 
 #next{
     padding: 12px 20px;
     padding-bottom: 2px;
-    text-align: right;
     background-color: transparent;
     border: none;
     font-size: 16px;
     cursor: pointer;
     float: right;
+    color: #2563eb;
+    font-weight: 300;
+}
+
+#restart{
+    padding: 12px 20px;
+    padding-bottom: 2px;
+    float: left;
+    background-color: transparent;
+    border: none;
+    font-size: 16px;
+    cursor: pointer;
     color: #2563eb;
     font-weight: 300;
 }
